# tatou

./: .coveragerc  .env.example  .gitignore  API.md  LICENSE  Platform_specifications.md  README.md  conftest.py  deploy.sh  docker-compose.yml  flag  mutation_config.toml  mutation_session1.sqlite  mutation_session10.sqlite  mutation_session11.sqlite  mutation_session12.sqlite  mutation_session2.sqlite  mutation_session5.sqlite  mutation_session8.sqlite  pytest.ini  sample.env  test.php
db/: tatou.sql
server/: API.md  BUGS.md  Dockerfile  __init__.py  entrypoint.sh  flag  openapi.yml  pyproject.toml  wm_stamp.sh
server/.venv312/: pyvenv.cfg
server/fuzz/: run-smoke.sh
server/openapi/: openapi.yaml
server/pki/: Group_03.asc  Group_05.asc  Group_08.asc  Group_13.asc  Group_15.asc  Group_17.asc  Group_18.asc  Group_19.asc  Group_21.asc  Group_26.asc
server/src/: add_after_eof.py  metadata_embedding.py  server.py  unsafe_bash_bridge_append_eof.py  watermarking_cli.py  watermarking_method.py  watermarking_utils.py  watermarking_utils.py.bak.1758122723  wm_encrypted  wm_encrypted.py  wm_stamp.sh  wm_visible_stamp_gs.py
server/test/: conftest.py  test_api.py  test_auth_flow.py  test_fuzz_concurrency_smoke.py  test_fuzz_doc_ids.py  test_fuzz_headers_json.py  test_fuzz_rmap_payloads.py  test_fuzz_schemathesis.py  test_fuzz_static_traversal.py  test_fuzz_targeted_watermark_json.py  test_fuzz_upload_manual.py  test_fuzz_watermark_hypothesis.py  test_healthz.py  test_mutation_testing_tests.py  test_protected_endpoints.py  test_regression_001_method_semantics.py  (+1 more)
(+33 files in other folders)
